--- a/pages/backend.html
+++ b/pages/backend.html
@@ -17,28 +17,14 @@
   </head>
   <body>
     <section class="container-fluid d-flex justify-content-center my-3">
-      <h2>Racing de Chivilcoy - Backend</h2>
+      <h2 class="my-4">Racing de Chivilcoy - Backend</h2>
     </section>
-    <section class="container-fluid d-flex justify-content-center my-3">
-      <form class="col-sm-10 col-10 col-md-4 text-center" id="loginForm">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Usuario</label>
-          <input
-            type="text"
-            class="form-control"
-            id="inputUsuario"
-            aria-describedby="emailHelp"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label"
-            >Contraseña</label
-          >
-          <input type="password" class="form-control" id="inputContraseña" />
-        </div>
-        <button type="submit" class="btn btn-primary">Entrar</button>
-        <div class="mt-3"><h4 id="mensajeDatosIncorrectos"></h4></div>
-      </form>
+    <section class="container-fluid d-flex flex-column align-items-center my-3">
+      <div class="my-4">
+        <button class="btn btn-primary" id="loginGoogle">
+          Iniciar sesión con Google
+        </button>
+      </div>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -47,6 +33,7 @@
     ></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
     <script src="../js/backend.js"></script>
   </body>
 </html>
