--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -40,8 +40,78 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid mainEstadios">
-        <h1>Estadios</h1>
+    <main class="container-fluid d-flex flex-column align-items-center mainEstadios p-0">
+      <h1>Estadios</h1>
+      <section class="container-fluid d-flex flex-row p-0">
+        <article class="col-12 col-md-6 d-flex flex-column align-items-center">
+          <div class="text-center my-2">
+            <h3>Estadio Norte</h3>
+            <h3>"Julio C. Nicieza"</h3>
+          </div>
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../media/estadios/norte/IMG_3986.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/estadios/norte/IMG_3987.JPG" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <div class="mapContainer mt-3">
+            <div class="mapCobertor">
+              <div class="mapCobertorContent">
+              </div>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.9727451956882!2d-60.012846696695135!3d-34.89218444216697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bea5478b02e6dd%3A0xa441c8039728043e!2sClub%20Racing!5e0!3m2!1ses-419!2sar!4v1721236860011!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="botonContainer center">
+              <button id="toggleMap" class="toggleBoton">Abrir Mapa</button>
+            </div>
+          </div>
+        </article>
+        <article class="col-12 col-md-6 d-flex flex-column align-items-center">
+          <div class="text-center my-2"></div>
+            <h3>Estadio Sur</h3>
+            <h3>"Grilon Arena"</h3>
+          </div>
+          <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../media/estadios/sur/IMG_3917.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/estadios/sur/IMG_4005.JPG" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <div class="mapContainer mt-3">
+            <div class="mapCobertor2">
+              <div class="mapCobertorContent">
+              </div>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d817.9443985570721!2d-60.01599668730715!3d-34.91203046387368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bea59f707b9939%3A0x608c14875639cef5!2sGRILON%20ARENA!5e0!3m2!1ses-419!2sar!4v1721236806330!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="botonContainer2 center">
+              <button id="toggleMap2" class="toggleBoton">Abrir Mapa</button>
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
     <footer>
       <!-- FooterLarge -->
@@ -104,9 +174,9 @@
             </div>
           </div>
           </article>
-        </section>
-        <!-- FooterSmall -->
-        <section id="footerSmall" class="d-none">
+      </section>
+      <!-- FooterSmall -->
+      <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
             <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
@@ -162,7 +232,7 @@
               </div>
             </div>
           </article>
-        </section>
+      </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/estadios.js"></script>
