--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/plantel.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"
@@ -45,14 +46,14 @@
       <section class="container-fluid d-flex flex-column flex-md-row p-0 sectionPlantel">
         <div class="row w-100 justify-content-evenly m-0">
         <!-- Jugador 1 -->
-        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <img class="fotoPlantel" src="../media/Plantel/barrales.jpg" alt="">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+            <div class="col-6 d-flex flex-column text-center">
               <h3>Datos:</h3>
-              <div class="d-flex flex-column align-items-start">
+              <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Alejo Barrales</h5>
                 <h5 class="mt-1 mb-1">Edad: 32</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.75m</h5>
@@ -62,14 +63,14 @@
           </div>
         </article>
         <!-- Jugador 2 -->
-        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+            <div class="col-6 d-flex flex-column text-center">
               <h3>Datos:</h3>
-              <div class="d-flex flex-column align-items-start">
+              <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
                 <h5 class="mt-1 mb-1">Edad: 27</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
@@ -79,14 +80,14 @@
           </div>
         </article>
         <!-- Jugador 3 -->
-        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+            <div class="col-6 d-flex flex-column text-center">
               <h3>Datos:</h3>
-              <div class="d-flex flex-column align-items-start">
+              <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
                 <h5 class="mt-1 mb-1">Edad: 27</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
@@ -96,14 +97,14 @@
           </div>
         </article>
         <!-- Jugador 4 -->
-        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <img class="fotoPlantel" src="../media/Plantel/barrales.jpg" alt="">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+            <div class="col-6 d-flex flex-column text-center">
               <h3>Datos:</h3>
-              <div class="d-flex flex-column align-items-start">
+              <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Alejo Barrales</h5>
                 <h5 class="mt-1 mb-1">Edad: 32</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.75m</h5>
@@ -113,14 +114,14 @@
           </div>
         </article>
         <!-- Jugador 5 -->
-        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+            <div class="col-6 d-flex flex-column text-center">
               <h3>Datos:</h3>
-              <div class="d-flex flex-column align-items-start">
+              <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
                 <h5 class="mt-1 mb-1">Edad: 27</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
@@ -130,14 +131,14 @@
           </div>
         </article>
         <!-- Jugador 6 -->
-        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+            <div class="col-6 d-flex flex-column text-center">
               <h3>Datos:</h3>
-              <div class="d-flex flex-column align-items-start">
+              <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
                 <h5 class="mt-1 mb-1">Edad: 27</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
