--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Esta es la web de Racing Club Chivilcoy, inspirada principalmente en el Basquet. Vas a poder encontrar todo lo referido al plantel, próximos partidos, noticias y más.">
+    <meta name="keywords" content="Racing, Club, Chivilcoy, Basquet, Liga Argentina, TNA, AKD">
     <title>Racing Club Chivilcoy</title>
     <link rel="shortcut icon" href="./media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -24,7 +26,7 @@
       <nav id="nav" class="navbar navbar-expand-md p-0 custom-navbar">
         <div class="container-fluid p-0">
           <a class="navbar-brand" href="./index.html">
-            <img src="./media/img16-transformed_preview_rev_1.png" alt="" class="ms-2 logoRacing"/>
+            <img src="./media/img16-transformed_preview_rev_1.png" alt="Logo de Racing Basquet" class="ms-2 logoRacing"/>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +52,7 @@
           <div class="position-absolute top-50 start-50 translate-middle divArticle1" id="divAKD">
             <img
               src="./media/akdBlanco.png"
-              alt=""
+              alt="Logo AKD institucional"
               class="akdBlanco"
               data-aos="fade-up"
               data-aos-duration="1000"
@@ -235,31 +237,31 @@
         <article class="article31 d-flex align-items-center">
           <div class="owl-carousel container-fluid d-flex align-items-center">
             <div class="item">
-              <img src="./media/sponsors/Grilon3_page-0001 (1).jpg" alt="" />
+              <img src="./media/sponsors/Grilon3_page-0001 (1).jpg" alt="Logo Grilon 3" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/grilon_corto (1)_page-0001 (1).jpg" alt="" />
+              <img src="./media/sponsors/grilon_corto (1)_page-0001 (1).jpg" alt="Logo Grilon" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/grilon_multi (1) (1).png" alt="" />
+              <img src="./media/sponsors/grilon_multi (1) (1).png" alt="Logo Grilon Multi Filamentos" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/Logo NTH (1).png" alt="" />
+              <img src="./media/sponsors/Logo NTH (1).png" alt="Logo NTH" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/logo_grilon_pez (2) (1).png" alt="" />
+              <img src="./media/sponsors/logo_grilon_pez (2) (1).png" alt="Logo Grilon Pez" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/logo_starlight_page-0002 (1).jpg" alt="" />
+              <img src="./media/sponsors/logo_starlight_page-0002 (1).jpg" alt="Logo Grilon Starlight" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/macronita-logotipo_page-0001 (1).jpg" alt="" />
+              <img src="./media/sponsors/macronita-logotipo_page-0001 (1).jpg" alt="Logo Macronita" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/nitanyl (2) (1).png" alt="" />
+              <img src="./media/sponsors/nitanyl (2) (1).png" alt="Logo Nitanyl" />
             </div>
             <div class="item">
-              <img src="./media/sponsors/prestito fondo blanco (1).png" alt="" />
+              <img src="./media/sponsors/prestito fondo blanco (1).png" alt="Logo Prestito" />
             </div>
           </div>
         </article>
@@ -353,26 +355,26 @@
           </div>
           <!-- Escudo Racing -->
           <div class="col-6 pt-4 pb-4 d-flex justify-content-center divEscudoRacing">
-            <img src="./media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
+            <img src="./media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="Escudo Racing Chivilcoy" class="escudoRacing"/>
           </div>
           <!-- Ligas -->
           <div class="col-3 d-flex justify-content-evenly align-items-center p-0">
             <!-- Liga Chivilcoyana -->
             <div class="col d-flex justify-content-center">
               <a href="https://www.instagram.com/basquetchivilcoy/" target="blank">
-                <img src="./media/img17_preview_rev_1.png" alt="" class="logosLigas"/>
+                <img src="./media/img17_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
               </a>
             </div>
             <!-- Liga Bonaerense -->
             <div class="col d-flex justify-content-center">
               <a href="https://www.instagram.com/federacionbonaerensebasquet/" target="blank">
-                <img src="./media/img18_preview_rev_1.png" alt="" class="logosLigas"/>
+                <img src="./media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
               </a>
             </div>
             <!-- Liga Argentina -->
             <div class="col d-flex justify-content-center">
               <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                <img src="./media/img19_preview_rev_1.png" alt="" class="logosLigas"/>
+                <img src="./media/img19_preview_rev_1.png" alt="Logo Liga Argentina de Basquet" class="logosLigas"/>
               </a>
             </div>
           </div>
@@ -383,7 +385,7 @@
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
             <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
-              <img src="./media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
+              <img src="./media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="Escudo Racing Chivilcoy" class="escudoRacing"/>
             </div>
             <!-- Redes + Ligas -->
             <div class="d-flex flex-row col-12">
@@ -418,19 +420,19 @@
               <!-- Liga Chivilcoyana -->
               <div class="col p-0 my-2 d-flex justify-content-center">
                 <a href="https://www.instagram.com/basquetchivilcoy/" target="blank">
-                  <img src="./media/img17_preview_rev_1.png" alt="" class="logosLigas"/>
+                  <img src="./media/img17_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
                 </a>
               </div>
               <!-- Liga Bonaerense -->
               <div class="col p-0 my-2 d-flex justify-content-center">
                 <a href="https://www.instagram.com/federacionbonaerensebasquet/" target="blank">
-                  <img src="./media/img18_preview_rev_1.png" alt="" class="logosLigas"/>
+                  <img src="./media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
                 </a>
               </div>
               <!-- Liga Argentina -->
               <div class="col p-0 my-2 d-flex justify-content-center">
                 <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                  <img src="./media/img19_preview_rev_1.png" alt="" class="logosLigas"/>
+                  <img src="./media/img19_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
                 </a>
               </div>
             </div>
