--- a/pages/productos.html
+++ b/pages/productos.html
@@ -22,7 +22,7 @@
       <nav id="nav" class="navbar navbar-expand-md p-0 custom-navbar">
         <div class="container-fluid p-0">
           <a class="navbar-brand" href="../index.html">
-            <img src="../media/img16-transformed_preview_rev_1.png" alt="" class="ms-2 logoRacing"/>
+            <img src="../media/img16-transformed_preview_rev_1.png" alt="Logo de Racing Basquet" class="ms-2 logoRacing"/>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,8 +56,10 @@
           <div class="col-3 d-flex justify-content-evenly align-items-center p-0">
             <!-- Instagram -->
             <div class="col d-flex justify-content-center">
-              <a href="https://www.instagram.com/racingchivilcoybasquet?igsh=b2VxM3NpZDN3ZWIy" target="blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/></svg></i>
+              <a href="https://www.instagram.com/racingchivilcoybasquet?igsh=b2VxM3NpZDN3ZWIy" target="blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#131748" class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+                </svg></i>
               </a>
             </div>
             <!-- Twitter/X -->
@@ -77,7 +79,7 @@
               </a>
             </div>
             <!-- TikTok -->
-            <div class="col d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
+            <div class="col d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#131748" class="bi bi-tiktok" viewBox="0 0 16 16">
               <a href="https://www.tiktok.com/@racingchivilcoybasquet" target="_blank" rel="noopener noreferrer">
                 <path fill="#131748" d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
               </a>
@@ -85,37 +87,37 @@
           </div>
           <!-- Escudo Racing -->
           <div class="col-6 pt-4 pb-4 d-flex justify-content-center divEscudoRacing">
-            <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
+            <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="Escudo Racing Chivilcoy" class="escudoRacing"/>
           </div>
           <!-- Ligas -->
           <div class="col-3 d-flex justify-content-evenly align-items-center p-0">
             <!-- Liga Chivilcoyana -->
             <div class="col d-flex justify-content-center">
               <a href="https://www.instagram.com/basquetchivilcoy/" target="blank">
-                <img src="../media/img17_preview_rev_1.png" alt="" class="logosLigas"/>
+                <img src="../media/img17_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
               </a>
             </div>
             <!-- Liga Bonaerense -->
             <div class="col d-flex justify-content-center">
               <a href="https://www.instagram.com/federacionbonaerensebasquet/" target="blank">
-                <img src="../media/img18_preview_rev_1.png" alt="" class="logosLigas"/>
+                <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
               </a>
             </div>
             <!-- Liga Argentina -->
             <div class="col d-flex justify-content-center">
               <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                <img src="../media/img19_preview_rev_1.png" alt="" class="logosLigas"/>
+                <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Argentina de Basquet" class="logosLigas"/>
               </a>
             </div>
           </div>
           </article>
-        </section>
-        <!-- FooterSmall -->
-        <section id="footerSmall" class="d-none">
+      </section>
+      <!-- FooterSmall -->
+      <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
             <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
-              <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
+              <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="Escudo Racing Chivilcoy" class="escudoRacing"/>
             </div>
             <!-- Redes + Ligas -->
             <div class="d-flex flex-row col-12">
@@ -150,24 +152,24 @@
               <!-- Liga Chivilcoyana -->
               <div class="col p-0 my-2 d-flex justify-content-center">
                 <a href="https://www.instagram.com/basquetchivilcoy/" target="blank">
-                  <img src="../media/img17_preview_rev_1.png" alt="" class="logosLigas"/>
+                  <img src="../media/img17_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
                 </a>
               </div>
               <!-- Liga Bonaerense -->
               <div class="col p-0 my-2 d-flex justify-content-center">
                 <a href="https://www.instagram.com/federacionbonaerensebasquet/" target="blank">
-                  <img src="../media/img18_preview_rev_1.png" alt="" class="logosLigas"/>
+                  <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
                 </a>
               </div>
               <!-- Liga Argentina -->
               <div class="col p-0 my-2 d-flex justify-content-center">
                 <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                  <img src="../media/img19_preview_rev_1.png" alt="" class="logosLigas"/>
+                  <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
                 </a>
               </div>
             </div>
           </article>
-        </section>
+      </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script
