--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -41,8 +41,10 @@
       </nav>
     </header>
     <main class="container-fluid d-flex flex-column align-items-center mainEstadios p-0">
-      <h1>Estadios</h1>
-      <section class="container-fluid d-flex flex-row p-0">
+      <div>
+        <h1>Estadios</h1>
+      </div>
+      <section class="d-flex flex-column flex-md-row p-0">
         <article class="col-12 col-md-6 d-flex flex-column align-items-center">
           <div class="text-center my-2">
             <h3>Estadio Norte</h3>
