--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         </article>
       </section>
     <!-- Carrusel Productos -->
-      <section class="section4 mb-3">
+      <section class="section4 mb-3 pb-3">
         <div class="d-flex flex-column justify-content-center">
           <div class="d-flex justify-content-center mt-2">
             <a href="./pages/productos.html" class="nuestrosProductos"><h1>Nuestros productos</h1></a>
