--- a/index.html
+++ b/index.html
@@ -259,13 +259,44 @@
         <!-- Próximos Partidos -->
         <article class="article21 container-fluid p-0 d-flex align-items-center justify-content-evenly pt-2 pb-2" id="article21">
           <div class="d-flex flex-column align-items-center col-4 p-0" id="proximosPartidos">
-            <div>
-              <h5 class="tituloProximosPartidos">Próximos partidos</h5>
-            </div>
-            <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="45px" viewBox="0 -960 960 960" width="45px" fill="#131748">
-                <path d="M580-240q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
-              </svg>
+            <a href="#" class="btn btn-primary botonFixture" data-bs-toggle="modal" data-bs-target="#miModal">
+              <div>
+                <h5 class="tituloProximosPartidos">Próximos partidos</h5>
+              </div>
+              <div>
+                <h5 class="tituloFixtureCompleto">Fixture</h5>
+              </div>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" height="45px" viewBox="0 -960 960 960" width="45px" fill="#131748">
+                  <path d="M580-240q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
+                </svg>
+              </div>
+            </a>
+          </div>
+          <!-- Fixture Completo-->
+          <div class="modal fade" id="miModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl custom-modal-width">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title" id="modalLabel">Fixture</h2>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="row">
+                    <!-- Primera y segunda imagen en columnas en pantallas medianas -->
+                    <div class="col-12 col-xl-6 mb-3">
+                      <img src="./media/fixtures/octubre.jpg" class="img-fluid" alt="Fixture Octubre">
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                      <img src="./media/fixtures/noviembre.jpg" class="img-fluid" alt="Fixture Noviembre">
+                    </div>
+                    <!-- Tercera imagen centrada en pantallas medianas -->
+                    <div class="col-12 col-xl-6 mx-md-auto mb-3">
+                      <img src="./media/fixtures/diciembre.jpg" class="img-fluid" alt="Fixture Diciembre">
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- Partido 1 -->
@@ -378,6 +409,9 @@
             </div>
             <div class="item">
               <img src="./media/sponsors/prestito fondo blanco (1).png" alt="Logo Prestito" />
+            </div>
+            <div class="item">
+              <img src="./media/sponsors/lona Di Palma Repuestos 3x09 c_p (1).png" alt="Logo Di Palma Respuestos" />
             </div>
           </div>
         </article>
