--- a/admin/backend.admin.html
+++ b/admin/backend.admin.html
@@ -529,6 +529,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
-    <script src="../js/backendAdmin.js"></script>
+    <script src="./backendAdmin.js"></script>
   </body>
 </html>
