--- a/admin/backend.html
+++ b/admin/backend.html
@@ -34,6 +34,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
-    <script src="../js/backend.js"></script>
+    <script src="./backend.js"></script>
   </body>
 </html>
