--- a/pages/club.html
+++ b/pages/club.html
@@ -44,20 +44,51 @@
       <section class="container-fluid d-flex flex-column align-items-center">
         <h1 class="mb-3 mt-3">Club</h1>
         <div class="col-12">
-            <div class="clearfix">
-                <img src="../media/Plantel/plantelCompleto.jpg" class="col-5 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
-                <p class="text-center">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, sit? Doloremque provident ipsum, cumque facere aliquid harum error laudantium, tenetur dolorem dolor minus dolores enim architecto. Nobis fugiat alias fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ab amet corrupti maiores at, vel natus ipsam architecto velit, voluptates nulla, quidem veniam quae ipsum necessitatibus. Labore sapiente voluptas ratione! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum dolore, quia, odio voluptatem, mollitia odit exercitationem eum maxime aspernatur aliquam distinctio eligendi repellat illum accusantium. Mollitia aut vitae fugiat eaque! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit dolor aut, enim fuga commodi ipsum quis ipsa, eum reprehenderit eos sapiente rem, vitae cupiditate. Iste quia error molestiae pariatur fugit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur maiores consequuntur, perferendis fugiat officiis voluptas reprehenderit consectetur vel aperiam nulla sunt quasi, natus, nostrum voluptatum omnis est beatae aspernatur laudantium!
+            <div class="">
+                <img src="../media/Plantel/plantelCompleto.jpg" class="col-12 col-md-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
+                <p class="fs-5">
+                  Un <b>9 de julio de 1914 en la esquina de Maipu y Juramento nacía el Racing Club de Chivilcoy</b>, por el accionar de un grupo de jóvenes hinchas de los albicelestes de Avellaneda, entre ellos Francisco Vachino, primer presidente y quien cedió una habitación familiar para lograr plasmar esta idea. 
+                  A lo largo de estos 110 años han pasado muchas personas, familias y hechos relacionados a la vida institucional que marcan a fuego cada paso de esta historia, los más sobresalientes hasta llegar hoy adonde estamos, en una línea resumida del tiempo, son: <br>
+                  ◦ <b>1914</b> los fundadores integrantes de la primera comisión directiva se reunían en casa de los Vachino. Ellos fueron: Ballerini, Bacigaluppo, Alem, Alfonso, Meretta, Gnochi, Naberbury y Vera. La camiseta original tenía fondo rojo con rayas verticales verdes. En ese año se formaba el primer equipo de fútbol. <br>
+                  ◦ <b>1915</b> Racing consigue su primera copa deportiva, que aún hoy luce orgullosamente en nuestras vitrinas para las generaciones venideras. <br>
+                  ◦ <b>1918</b> se logra el primer campeonato de fútbol local. <br>
+                  ◦ <b>1919</b> continúan los triunfos en el fútbol y comienza la actividad social, en ese año se organizan los primero bailes populares. <br>
+                  ◦ <b>1920</b> aparece el seminario deportivo-literario, una conquista de la época. <br>
+                  ◦ <b>1921</b> se inaugura la primera biblioteca, y también se realiza la primera rifa para recaudar fondos necesarios. <br>
+                  ◦ <b>1922</b> la provincia de Buenos Aires distingue a nuestro primer equipo con brazalete de honor. <br>
+                  ◦ <b>1925</b> el socio Vicente Perito dedica a la institución la “polka sportiva” Racing club, que hace distinción de nuestra institución. <br>
+                  ◦ <b>1931</b> comienza la colaboración con la Doble Chivilcoy, organizada por el Club Ciclista Chivilcoy (hoy Doble Bragado), competencia que hasta mediados de la década del ‘80 llegó hasta nuestra sede. <br>
+                  ◦ <b>1935</b> después de mucho tiempo de arduo trabajo, se inaugura la primera cancha de basquetbol en el predio de la calle Alsina. <br>
+                  ◦ <b>1936</b> se alcanza el primer campeonato de la era de la Federacion de Chivilcoy. Después de este la institución decide abundar la disciplina. <br>
                 </p>
-                <p class="text-center">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ratione placeat reiciendis nulla! Et labore minus magnam iusto vitae adipisci modi asperiores voluptate pariatur? Harum totam placeat aliquam sed natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit sequi dignissimos ullam voluptas architecto omnis aperiam suscipit autem est explicabo, ut nihil amet nulla? Suscipit, sapiente voluptas! Amet, quasi repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet laborum excepturi nostrum quae quibusdam, voluptatibus rerum debitis dolore veritatis quisquam natus dolores aspernatur vitae repellendus et consequatur magnam atque earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur et saepe ullam ipsam, necessitatibus a, qui voluptatum debitis corrupti minus recusandae quam architecto ut numquam ea veritatis, totam consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex assumenda maxime ipsam neque dolorem. Nam sapiente aliquam distinctio laudantium vitae quisquam excepturi. Rerum voluptatem, consectetur ad quae ut rem cupiditate. 
+                <p class="fs-5">
+                  ◦ <b>1937</b> la pareja de pelotaris racinguista Rampazzi - Garrido es finalista en el torneo de la Provincia de Buenos Aires.  <br>
+                  ◦ <b>1939</b> Comienza la entrega de documentación para la Personeria Jurídica.  <br>
+                  ◦ <b>1940</b> Se conforma  elenco de teatro de la institución, dirigido de L. Meretta.  <br>
+                  ◦ <b>1941</b> Bajo la presidencia del arquitecto Gustavo Correa, se compra el predio de Alsina y Av Soares donde hoy fu no nos nuestro club. Llega la Personeria Jurídica gestionada desde tiempo antes.  <br>
+                  ◦ <b>1943</b> Racing organiza un extraordinario baile popular para los carnavales, con gran éxito.  <br>
+                  ◦ <b>1945</b> Racing Club es campeón invicto de baby fútbol.  <br>
+                  ◦ <b>1947</b> Regresa a la institución la actividad teatral, para cubrir una necesidad social del momento.  <br>
+                  ◦ <b>1949</b> Se prepara el gran salón social, denominado El Rancho Grande, donde siguen los éxitos bailables.  <br>
+                  ◦ <b>1950</b> Época de grandes bailes. Sigue sonando más público a la vida teatral.  <br>
+                  ◦ <b>1952</b> Con un gran equipo, Racing triunfa en el Campeonato Chivilcoyano de Básquetbol.  <br>
+                  ◦ <b>1953</b> El Club Ciclista Bacion nos honra con la llegada de una importante etapa de la Doble de Bragado. En el Club se atiende a todos los competidores y organizadores.  <br>
+                  ◦ <b>1954</b> Se inicia la construcción del primer natatorio, obra dirigida por el arquitecto Gustavo Correa.  <br>
                 </p>
-                <img src="../media/Plantel/cuerpoTecnico.jpg" class="col-5 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
-                <p class="text-center">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis provident placeat recusandae dignissimos aut veniam quaerat repellat modi consequatur! Repudiandae fugit beatae perspiciatis obcaecati similique aperiam quos ullam vitae aliquid. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quam quos magnam repudiandae ipsam, cumque quis soluta, assumenda excepturi blanditiis est dolor nam officia tempore possimus veniam quisquam numquam. Sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam commodi molestias cupiditate soluta at numquam recusandae fugit optio delectus ipsum non, id, provident, sapiente amet dolor quas laudantium voluptatem deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit vitae voluptatum ducimus odit pariatur perferendis reiciendis eum quidem saepe, velit distinctio ipsum voluptatem? Vitae quas quo, beatae placeat odit qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla vero, quae consequatur totam voluptates saepe cum provident? Molestiae, necessitatibus quam sit ducimus quod ipsam adipisci nesciunt ipsa id veniam accusamus!
-                </p class="text-center">
-                <p class="text-center">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis provident placeat recusandae dignissimos aut veniam quaerat repellat modi consequatur! Repudiandae fugit beatae perspiciatis obcaecati similique aperiam quos ullam vitae aliquid. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quam quos magnam repudiandae ipsam, cumque quis soluta, assumenda excepturi blanditiis est dolor nam officia tempore possimus veniam quisquam numquam. Sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam commodi molestias cupiditate soluta at numquam recusandae fugit optio delectus ipsum non, id, provident, sapiente amet dolor quas laudantium voluptatem deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit vitae voluptatum ducimus odit pariatur perferendis reiciendis eum quidem saepe, velit distinctio ipsum voluptatem? Vitae quas quo, beatae placeat odit qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla vero, quae consequatur totam voluptates saepe cum provident? Molestiae, necessitatibus quam sit ducimus quod ipsam adipisci nesciunt ipsa id veniam accusamus!
+                <img src="../media/Plantel/cuerpoTecnico.jpg" class="col-12 col-md-6 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
+                <p class="fs-5">
+                  ◦ <b>1955</b> Se inaugura la pileta de natación. <br>
+                  ◦ <b>1960</b> Racing Club Chivilcoy se convierte en sede del Campeonato Argentino de Casin. Fue elegido por reunir las condiciones y por la forma de practicar ese deporte. Que contaba con grandes jugadores locales. <br>
+                  ◦ <b>1964</b> Se inicia la construcción de 2009 metros cuadrados para la sede social. <br>
+                  ◦ <b>1967</b> año muy triste para Racing. Por inconvenientes con una de las grandes rifas en boga de esa época, se llega al remate del club. El socio Julio Canepa lo compra, e inmediatamente dona el predio a la institución. <br>
+                  ◦ <b>1973</b> Periodo de esplendor del básquetbol, con un poderoso equipo liderado por Ernesto Tito Rambozzi y un sinfín de títulos. <br>
+                  ◦ <b>1974</b> Se suman las artes marciales, a través del Judo, con el maestro japonés Hiroya Wasa. La práctica continuara hasta 1980. <br>
+                  ◦ <b>1982</b> Vuelven los carnavales, organizados por el club, con participación de gente de distintas ciudades de la provincia. <br>
+                  ◦ <b>1983</b> Éxito de los corsos de Racing Club. Se inaugura la primera pileta climatizada. <br>
+                  ◦ <b>1984</b> Se afianzan los corsos; llegan a la ciudad comparsas correntinas y entrerianas. <br>
+                </p>
+                <p class="text-center fs-5">
+                                    
                 </p>
             </div>
         </div>
