--- a/pages/club.html
+++ b/pages/club.html
@@ -46,7 +46,7 @@
         <div class="col-12">
             <div class="">
                 <img src="../media/Plantel/plantelCompleto.jpg" class="col-12 col-md-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
-                <p class="fs-5">
+                <p class="parrafoClub">
                   Un <b>9 de julio de 1914 en la esquina de Maipu y Juramento nacía el Racing Club de Chivilcoy</b>, por el accionar de un grupo de jóvenes hinchas de los albicelestes de Avellaneda, entre ellos Francisco Vachino, primer presidente y quien cedió una habitación familiar para lograr plasmar esta idea. 
                   A lo largo de estos 110 años han pasado muchas personas, familias y hechos relacionados a la vida institucional que marcan a fuego cada paso de esta historia, los más sobresalientes hasta llegar hoy adonde estamos, en una línea resumida del tiempo, son: <br>
                   ◦ <b>1914</b> los fundadores integrantes de la primera comisión directiva se reunían en casa de los Vachino. Ellos fueron: Ballerini, Bacigaluppo, Alem, Alfonso, Meretta, Gnochi, Naberbury y Vera. La camiseta original tenía fondo rojo con rayas verticales verdes. En ese año se formaba el primer equipo de fútbol. <br>
@@ -61,7 +61,7 @@
                   ◦ <b>1935</b> después de mucho tiempo de arduo trabajo, se inaugura la primera cancha de basquetbol en el predio de la calle Alsina. <br>
                   ◦ <b>1936</b> se alcanza el primer campeonato de la era de la Federacion de Chivilcoy. Después de este la institución decide abundar la disciplina. <br>
                 </p>
-                <p class="fs-5">
+                <p class="parrafoClub">
                   ◦ <b>1937</b> la pareja de pelotaris racinguista Rampazzi - Garrido es finalista en el torneo de la Provincia de Buenos Aires.  <br>
                   ◦ <b>1939</b> Comienza la entrega de documentación para la Personeria Jurídica.  <br>
                   ◦ <b>1940</b> Se conforma  elenco de teatro de la institución, dirigido de L. Meretta.  <br>
@@ -76,7 +76,7 @@
                   ◦ <b>1954</b> Se inicia la construcción del primer natatorio, obra dirigida por el arquitecto Gustavo Correa.  <br>
                 </p>
                 <img src="../media/Plantel/cuerpoTecnico.jpg" class="col-12 col-md-6 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
-                <p class="fs-5">
+                <p class="parrafoClub">
                   ◦ <b>1955</b> Se inaugura la pileta de natación. <br>
                   ◦ <b>1960</b> Racing Club Chivilcoy se convierte en sede del Campeonato Argentino de Casin. Fue elegido por reunir las condiciones y por la forma de practicar ese deporte. Que contaba con grandes jugadores locales. <br>
                   ◦ <b>1964</b> Se inicia la construcción de 2009 metros cuadrados para la sede social. <br>
@@ -87,7 +87,7 @@
                   ◦ <b>1983</b> Éxito de los corsos de Racing Club. Se inaugura la primera pileta climatizada. <br>
                   ◦ <b>1984</b> Se afianzan los corsos; llegan a la ciudad comparsas correntinas y entrerianas. <br>
                 </p>
-                <p class="text-center fs-5">
+                <p class="parrafoClub">
                                     
                 </p>
             </div>
