--- a/pages/club.html
+++ b/pages/club.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Racing Club Chivilcoy - Club</title>
+    <link rel="canonical" href="https://www.racingclubchivilcoy.com.ar/pages/club.html">
     <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css" />
@@ -86,9 +87,26 @@
                   ◦ <b>1982</b> Vuelven los carnavales, organizados por el club, con participación de gente de distintas ciudades de la provincia. <br>
                   ◦ <b>1983</b> Éxito de los corsos de Racing Club. Se inaugura la primera pileta climatizada. <br>
                   ◦ <b>1984</b> Se afianzan los corsos; llegan a la ciudad comparsas correntinas y entrerianas. <br>
+                  ◦ <b>1986</b> festejo del 72 aniversario con la inauguración del Estadio Norte, techado. Única su actividad en la liga nacional de clubes. <br>
+                  ◦ ⁠<b>1987</b> llega el Jarate a Racing, de la mano de Dauria. Hoy continúa en constante crecimiento con Daniel Lavagnino. <br>
+                  ◦ ⁠⁠<b>1989</b> El básquetbol logra su mayor sueño: la participación en la Liga Nacional B de primera división. <br>
                 </p>
                 <p class="parrafoClub">
-                                    
+                  ◦ <b>⁠1995</b> se incorpora la práctica del Hockey sobre césped, feliz y positiva iniciativa. <br>
+                  ◦ <b>⁠1997</b> después de mucho tiempo y trabajo, se inaugura el gimnasio en el subsuelo. <br>
+                  ◦ <b>⁠2001</b> Se reinaugura la pileta climatizada, con una nueva estructura que la cubre, bajo la presidencia de Hugo Ventieri. <br>
+                  ◦ <b>2001</b>⁠La Categoría Pre infantiles alcanza el tercer puesto en el torneo de Asociación de Básquetbol de Chivilcoy. <br>
+                  ◦ <b>⁠2003</b> El Básquetbol logra el Subcampeonato de Preinfanriles, y los Campeonatos Apertura y Clausura en Infantivles. se consagra campeón del año y es la única institución que alcanz estos galardones. <br>
+                  ◦ <b>⁠2004</b> Se termina la tan ansiada obra sobre calle Alsina, se reacondicona la sala de karate (subsuelo) y se termina el piso del gimnasio. <br>
+                  ◦ <b>2005</b> Se amplía y modifica el buffet, dotándolo de las comodidades necesarias para un buen desenvolvimiento. <br>
+                  ◦ <b>⁠2006</b> El 13 de octubre se concreta una de las metas más soñadas: la adquisición de la quinta para el futuro campo de deportes. <br>
+                  ◦ <b>⁠2007</b> el gobierno nacional otorga un subsidio para construir el salón multiuoso. Tiene mucho que ver la gestión un ex presidente de Racing, el arquitecto Luis Bontempo. <br>
+                  ◦ ⁠<b>2008</b> Conienzan los trabajos en el campo de deportes. Se refacciona la casa existente y se realizan las tareas de desmonte y nivelación del terreno. Se trabaja en el sistema de calefacción del batatorio, vestuario, salón multiuso, filtros de agua y calderas. <br>
+                  ◦ <b>⁠2009</b> Se coloca un alambrado olímpico en el campo de deportes. se integra a Chivilcoy Rugby Club para representar a la institución en este deporte. se suscribes un comodato con la Dirección General de Cultura y Educación bonaerense, para que el centro de educación física N 12 utilice el natatorio. <br>
+                </p>
+                <p class="parrafoClub">
+                  ◦ <b>2010</b> Se termina el salón multiuso, que se inaugura el 7 de agosto. el momento de alegría termina el 8 de agosto cuando el Estadio Norte sufre un incendio, con pérdidas totales de instalación eléctrica, daños e paredes y parte del archivo, tribunas quemadas, vidrios rotos y problemas en el piso, que es especial para la práctica de básquet. La provincia de Buenos Aires otorga un subsidio de $60.000c. Se regulariza la deuda con AFIP. Se ilumina la cancha del campo de deportes. <br>
+                  ◦ <b>⁠2011</b> Contruccion de vestuarios en el campo de deportes. Se realiza un torneo de pelota palera en el cual intervienen campeones mundiales. Se inaugura el Jardín Maternal y el Jardín de Infantes. <br>
                 </p>
             </div>
         </div>
