--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Esta es la web de Racing Club Chivilcoy, inspirada principalmente en el Basquet. Vas a poder encontrar todo lo referido al plantel, próximos partidos, noticias y más.">
     <meta name="keywords" content="Racing, Club, Chivilcoy, Basquet, Liga Argentina, TNA, AKD">
     <title>Racing Club Chivilcoy</title>
+    <link rel="canonical" href="https://www.racingclubchivilcoy.com.ar/index.html">
     <link rel="shortcut icon" href="./media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
